# cpp-uml-generator

./: .gitignore  CMakeLists (root).txt  CMakeLists.txt  README.md  Roadmap.md  build.sh
cli/: CMakeLIsts.txt  CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/generator/: CMakeLists.txt  IUMLGenerator.h  PlantUMLGenerator.cpp  PlantUmlExporter.cpp  PlantUmlExporter.h
core/model/: Association.h  CMakeLists.txt  Class.h  ClassModel.h  Element.h  Field.h  Method.h  Namespace.h  Relationship.h  TranslationUnit.h  Type.h  UnifiedModel.h  model.h
core/parser/: CMakeLists.txt  libclang_parser.cpp  libclang_parser.h  parser_utils.h
test/: CMakeLIsts.txt  CMakeLists (test).txt  CMakeLists.txt  main.cpp
test/parser/: test_libclang_parser.cpp  test_parser.cpp
test/parser/inputs/: level1_simple_class.cpp  level1_simple_struct.cpp  level2_namespace_nested.cpp  level3_macros_forward_multiple_inheritance.cpp
test/test_inputs/: level2_inheritance_virtual.cpp  level3_templates_and_overloads.cpp
ui/: CMakeLists.txt
ui/app/: CMakeLists.txt  main.cpp
ui/app/src/: CMakeLists.txt  main.cpp
